; ModuleID = '/home/carl/AnghaBench/libgit2/tests/buf/extr_oom.c_oom_malloc.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/buf/extr_oom.c_oom_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* (i64, i8*, i32)* }

@std_alloc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, i8*, i32)* @oom_malloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @oom_malloc(i64 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* %4, align 8
  %8 = icmp ugt i64 %7, 100
  br i1 %8, label %9, label %10

9:                                                ; preds = %3
  br label %16

10:                                               ; preds = %3
  %11 = load i8* (i64, i8*, i32)*, i8* (i64, i8*, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @std_alloc, i32 0, i32 0), align 8
  %12 = load i64, i64* %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i8* %11(i64 %12, i8* %13, i32 %14)
  br label %16

16:                                               ; preds = %10, %9
  %17 = phi i8* [ null, %9 ], [ %15, %10 ]
  ret i8* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
